# server/src/models/User.js
@@ -42,7 +42,7 @@ const userSchema = mongoose.Schema({
     favorites: [
         {
             type: mongoose.Schema.Types.ObjectId,
-            ref: "Event",
+            ref: "event",
         },
     ],
 });
